added in fix for mixin-request

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -87,6 +87,10 @@ x-modal[overlay] {
   box-shadow: 0 0 10000px 10000px rgba(0, 0, 0, 0.5);
 }
 
+
+x-panel {
+	display: block;
+}
 x-shiftbox {
 	display: block;
 	position: relative;
