added width to sideMenu items

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -110,6 +110,7 @@ menu > button {
 #sideMenu > button {
   display: block;
   margin: 4px;
+  width: 100px;
 }
 
 x-placeholder[template="new-column"] label {
