--- a/public/css/app.css
+++ b/public/css/app.css
@@ -78,6 +78,9 @@ x-shiftbox[shift="downright"][open] > section {
 x-shiftbox[shift="right"][open] > section {
   left: -75%;
 }
+x-shiftbox section {
+  background-color: white;
+}
 
 x-modal {
   z-index: 1;
@@ -91,6 +94,7 @@ menu {
   padding: 0;
   margin: 0;
 }
+
 menu > button {
   height: 40px ;
   width: 40px;
@@ -99,6 +103,7 @@ menu > button {
   cursor: pointer;
   color: white;
 }
+
 #topMenu {
   display: inline-block;
 }
@@ -111,12 +116,4 @@ menu > button {
   display: block;
   margin: 4px;
   width: 100px;
-}
-
-x-placeholder[template="new-column"] label {
-  display: block;
-}
-
-x-item {
-  background-color: white;
 }
