--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,10 +20,9 @@ body > x-shiftbox {
 }
 
 x-appbar {
-  position: fixed;
   top:0;
   z-index: 1;
-  font: 2.2rem "MozTT", sans-serif;
+  font: 2.2rem/2.5rem "MozTT", sans-serif;
   background-color: cornflowerblue;
   color: white;
 }
@@ -31,7 +30,6 @@ x-appbar {
 x-appbar > * {
   padding: 8px 10px 0;
   cursor: pointer;
-  display: inline;
 }
 
 x-appbar {
@@ -39,10 +37,10 @@ x-appbar {
   -webkit-box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
   box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
   -webkit-transition: background-color 250ms linear;
-   -moz-transition: background-color 250ms linear;
-   -o-transition: background-color 250ms linear;
-   -ms-transition: background-color 250ms linear;
-   transition: background-color 250ms linear;
+  -moz-transition: background-color 250ms linear;
+  -o-transition: background-color 250ms linear;
+  -ms-transition: background-color 250ms linear;
+  transition: background-color 250ms linear;
 }
 
 x-slidebox {
